<resources>
    <string name="app_name" translatable="false">Learning Assistant</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="feed">Feed</string>
    <string name="schedule">Schedule</string>

    <string name="courseAdd">Add New Course</string>
    <string name="courseNameFormHint">Course Name</string>
    <string name="learntimeFormLabel">Learn on</string>

    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="TesttimeFormLabel">Testtime</string>
    <string name="add">ADD</string>
    <string name="description">add a description</string>
    <string name="error" translatable="false">Error</string>
    <string name="errMessage" translatable="false">Please complete the form.</string>
    <string name="okButton">OK</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="day">Day</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="save">SAVE</string>
    <string name="confirm">Confirmation</string>
    <string name="conMessage">Please check your details</string>
    <string name="yesButton">YES</string>
    <string name="backButton">BACK</string>
</resources>
